added GC log