@@ -27,5 +27,5 @@ tasks.withType(Test) {
 
 application {
     mainClass = 'cellarium.Main'
-    applicationDefaultJvmArgs = args
+    applicationDefaultJvmArgs = args + ["-XX:+PrintGC"]
 }
